# Sin_editor

./: ARCHITECTURE.md  AndroidManifest.xml  CMakeLists-android.txt  CMakeLists.txt  EditorEngine.kt  EditorView.kt  MainActivity.kt  README.md  STRUCTURE.md  SyntaxHighlighter.kt  editor.h  highlighter.h  jni_bridge.cpp  main.cpp  piece_table.cpp  piece_table.h  settings.gradle.kts
.github/workflows/: ci.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  piece_table.cpp  piece_table.h
app/src/main/java/com/sineditor/app/: EditorEngine.kt  EditorView.kt  FindReplaceDialog.kt  MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
